--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "validator": "^11.1.0"
   },
   "devDependencies": {
