--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "passport-jwt": "^4.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "validator": "^11.1.0"
+    "if-env": "^1.0.4",
+    "validator": "^11.1.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
