--- a/sempiternal/package.json
+++ b/sempiternal/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "validator": "^12.0.0"
+    "validator": "^12.0.0",
+    "react-router-dom": "^4.3.1"
   },
   "proxy": "http://localhost:3080",
   "scripts": {
