--- a/package.json
+++ b/package.json
@@ -18,25 +18,26 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "classnames": "^2.2.6",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.14",
     "mongoose": "^5.7.9",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react": "^16.6.3",
+    "react-awesome-button": "^6.3.1",
+    "react-dom": "^16.6.3",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-redux": "^7.1.1",
-    "if-env": "^1.0.4",
-    "validator": "^11.1.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "classnames": "^2.2.6",
-    "jwt-decode": "^2.2.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
