--- a/sempiternal/package.json
+++ b/sempiternal/package.json
@@ -15,13 +15,14 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react": "^16.11.0",
+    "react-awesome-button": "^6.3.1",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "validator": "^12.0.0",
-    "react-router-dom": "^4.3.1"
+    "validator": "^12.0.0"
   },
   "proxy": "http://localhost:3080",
   "scripts": {
