--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-sound": "^1.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "validator": "^11.1.0"
